# advent-of-code-2021

./: .rustfmt.toml  Cargo.toml
advent-of-code-core/: Cargo.toml
advent-of-code-core/src/: lib.rs
advent-of-code-day1/: Cargo.toml
advent-of-code-day1/src/: main.rs
advent-of-code-day10/: Cargo.toml
advent-of-code-day10/src/: main.rs  parser.rs
advent-of-code-day11/: Cargo.toml
advent-of-code-day11/src/: main.rs  simulator.rs
advent-of-code-day12/: Cargo.toml
advent-of-code-day12/src/: graph.rs  main.rs  string.rs
advent-of-code-day13/: Cargo.toml
advent-of-code-day13/src/: instruction.rs  main.rs
advent-of-code-day14/: Cargo.toml
advent-of-code-day14/src/: main.rs  polymer.rs
advent-of-code-day15/: Cargo.toml
advent-of-code-day15/src/: main.rs  pathfinder.rs
advent-of-code-day16/: Cargo.toml
advent-of-code-day16/src/: bits.rs  main.rs
advent-of-code-day17/: Cargo.toml
advent-of-code-day17/src/: main.rs  prob.rs
advent-of-code-day2/: Cargo.toml
advent-of-code-day2/src/: main.rs  submarine.rs
advent-of-code-day3/: Cargo.toml
advent-of-code-day3/src/: bitset.rs  main.rs  report.rs
advent-of-code-day4/: Cargo.toml
advent-of-code-day4/src/: bingo.rs  main.rs
advent-of-code-day5/: Cargo.toml
advent-of-code-day5/src/: main.rs  vent.rs
advent-of-code-day6/: Cargo.toml
advent-of-code-day6/src/: lanternfish.rs  main.rs
advent-of-code-day7/: Cargo.toml
advent-of-code-day7/src/: main.rs
advent-of-code-day8/: Cargo.toml
advent-of-code-day8/src/: digit.rs  main.rs
advent-of-code-day9/: Cargo.toml
advent-of-code-day9/src/: heightmap.rs  main.rs
