[package]
name = "advent-of-code-day1"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
eyre = "0.6.5"
structopt = "0.3.25"
strum = { version = "0.23.0", features = ["derive"] }
thiserror = "1.0.30"
