[package]
name = "advent-of-code-day12"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
eyre = "0.6.5"
structopt = "0.3.25"
aoc_core = { path = "../advent-of-code-core", package = "advent-of-code-core" }
strum = { version = "0.23.0", features = ["derive"] }
bounded-integer = { version = "0.5.0", features = ["types"] }
derivative = "2.2.0"
itertools = "0.10.3"
colored = "2.0.0"
